<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/SongOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:onClick="Song_on" />

    <Button
        android:text="@string/SongOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:onClick="Song_off" />

    <Button
        android:text="@string/ExitGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button7"
        android:onClick="Exit_game" />
</LinearLayout>